<resources>
    <string name="app_name">Cloth Store</string>
    <string name="create_order_title">tmp</string>
    <string name="login_title">tmp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="favorites_tab">Favorites</string>
    <string name="cart_tab">Cart</string>
    <string name="cart_button">Add to cart</string>
    <string name="favorites_button">Add to favorites</string>
    <string name="search_title">search</string>
    <string name="cart_delete_button">Delete from cart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_tab">Login</string>
    <string name="action_register">Create account</string>
    <string name="register_tab">Registration</string>
    <string name="prompt_name">first name</string>
    <string name="prompt_last_name">last name</string>
    <string name="favorites_delete_button">Delete from favorites</string>
    <string name="alert_dialog_confirm">yes</string>
    <string name="alert_dialog_decline">no</string>
    <string name="cart_buy_button">Buy</string>

</resources>